# python-bazel-docker

./: BUILD.bazel  Dockerfile  README.md  WORKSPACE  cloudbuild.yaml  main.py  requirements.txt
